# mlops-wlamart-test

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml
ci/: ci.yml  deploy-infra.yml  deploy-model.yml  run-sagemaker-pipeline.yml
infra/: cloudformation.yml  parameters_dev.json  parameters_prod.json
notebooks/: EDA_and_modeling.ipynb  Predictive_Maintenance_A_Statistical_Approach.ipynb  Predictive_Maintenance_EDA.ipynb
pipelines/: run_pipeline.py
pipelines/predictive-maintenance/: pipeline.py  requirements.txt
pipelines/predictive-maintenance/features/: online_fe.py
pipelines/predictive-maintenance/preprocess/: preprocess.py
pipelines/predictive-maintenance/train/: training.py
pipelines/predictive-maintenance/utils/: utils_logging.py  utils_preprocess.py  utils_training.py
services/online/: fast_app.py  lambda_app.py
